@@ -4,6 +4,7 @@ Overview of changes in lightdm 0.3.3
     * Fix daemon using 100% CPU after greeter quits
     * Fix crash when users don't have GECOS data
     * Greeters can now detect user add/remove events
+    * Fix ConsoleKit support broken with switch to GDBus
 
 Overview of changes in lightdm 0.3.2
 
